fix spacing on homepage's main text

--- a/css/main.less
+++ b/css/main.less
@@ -1218,6 +1218,7 @@ p.post-meta .fa {
       border-bottom: 8px solid @pink;
       font-weight: normal;
       font-size: 1.2em;
+      margin-right: 1.5rem;
     }
     .svg {
       max-width: 900px;
